# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: code-check.yml
page_loader/: __init__.py  download_handler.py  file_handler.py  html_processing.py  logging.py  page_loader.py  url_processing.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: conftest.py  test_argparse.py  test_download_handler.py  test_file_handler.py  test_html_processing.py  test_page_loader.py
tests/fixture_files_extra_functions/: __init__.py  fixture_file_read.py
tests/fixtures/: argparse_help_output  argparse_missing_page_url_arg  expected_ru-hexlet-io-courses.html
tests/helpers/: __init__.py  utils.py
