[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This package allows you to download web pages with all content."
authors = ["Алексей Фоминых <foma1994@yandex.ru>"]
repository = "https://github.com/Ky3mu40FF/python-project-51"
packages = [
    { include = "page_loader" },
]

classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests = "^2.28.1"
requests-mock = "^1.10.0"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
